- Fix User Login and Refresh
